fix word wrap home

--- a/app/assets/stylesheets/home.css.less
+++ b/app/assets/stylesheets/home.css.less
@@ -99,6 +99,7 @@ h1 {
     line-height: 1.3em;
     clear: both;
     margin-bottom: 1em;
+    word-wrap: break-word;
 
     strong {
       text-align: center;
